--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta
             name="viewport"
-            content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+            content="width=device-width, userEntity-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <title>Administracion de Usuarios</title>
@@ -13,7 +13,7 @@
 <h1>Bienvenidos a la pagina de inicio</h1>
 <h2>
     Consulte la documentación de la API.
-    <a href="/swagger-ui"
+    <a href="/swagger-ui/"
     >here</a
     >
 </h2>
